# Smart-Home-Robot

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Config.ini  Explorer.cpp  Explorer.h  Interface.sln  Interface.vcxproj  Interface.vcxproj.filters  Interface_automoc.cpp  KinectGrabber.cpp  KinectGrabber.h  Learner.cpp  Learner.h  MicroCommander.cpp  MicroCommander.h  Micro_Code.ino  MyObject.cpp  MyObject.h  Notes.txt  OdometryGrabber.cpp  OdometryGrabber.h  PathDirector.cpp  PathDirector.h  README.md  SLAM.cpp  SLAM.h  Segmentor.cpp  Segmentor.h  SharedResource.cpp  SharedResource.h  Viewer.cpp  Viewer.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
x64/Debug/ZERO_CHECK/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
x64/RelWithDebInfo/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
x64/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
x64/Release/ZERO_CHECK/: ZERO_CHECK.lastbuildstate
